@@ -4042,10 +4042,10 @@ void battle_set_defaults() {
 	battle_config.pc_cloak_check_type = 1;
 	battle_config.monster_cloak_check_type = 0;
 	battle_config.estimation_type = 3;
-	battle_config.gvg_short_damage_rate = 100;
-	battle_config.gvg_long_damage_rate = 75;
+	battle_config.gvg_short_damage_rate = 80;
+	battle_config.gvg_long_damage_rate = 80;
 	battle_config.gvg_weapon_damage_rate = 60;
-	battle_config.gvg_magic_damage_rate = 50;
+	battle_config.gvg_magic_damage_rate = 60;
 	battle_config.gvg_misc_damage_rate = 60;
 	battle_config.gvg_flee_penalty = 20;
 	battle_config.gvg_eliminate_time = 7000;
